Replace repo name for testing

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    bacterial-genomics/wf-ani Nextflow configuration file
+    gregorysprenger/wf-ani Nextflow configuration file
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 */
 
@@ -54,9 +54,9 @@ if (params.workflows.containsKey(params.ani)) {
 */
 
 manifest {
-    name            = 'bacterial-genomics/wf-ani'
+    name            = 'gregorysprenger/wf-ani'
     author          = "Christopher A. Gulvik"
-    homePage        = 'https://github.com/bacterial-genomics/wf-ani'
+    homePage        = 'https://github.com/gregorysprenger/wf-ani'
     description     = "Perform Average Nucleotide Identity (ANI) on FastA/Genbank files."
     mainScript      = 'main.nf'
     nextflowVersion = '!>=22.04.3'
